--- a/css/index.css
+++ b/css/index.css
@@ -106,6 +106,11 @@ li a {
   border: 6px double #fff;
 }
 
+li a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
 ul li {
   border-color: #999;
   opacity: 0.5;
