--- a/css/index.css
+++ b/css/index.css
@@ -74,18 +74,20 @@ li {
   padding: 0 45px;
 }
 
-li input {
+li>input {
   position: absolute !important;
-  top: 2px;
+  top: 5px;
   left: 10px;
   width: 22px;
   height: 22px;
   cursor: pointer;
+  margin: 0 !important;
 }
 
 li p {
   margin: 0;
   cursor: pointer;
+  line-height: 34px;
 }
 
 li a {
