--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,11 @@ body {
   padding: 0;
   background-color: #cdcdcd;
   font-size: 16px;
-  min-width: 300px;
+  min-width: 350px;
+}
+
+a:hover {
+  text-decoration: none;
 }
 
 header {
@@ -27,7 +31,7 @@ label {
 }
 
 header input {
-  float: right;
+  float: left;
   width: 50%;
   height: 24px;
   margin-top: 12px;
@@ -35,7 +39,6 @@ header input {
   border: none;
   text-indent: 10px;
   outline: none;
-  margin-right: 2%;
 }
 
 h2 {
@@ -132,4 +135,17 @@ footer {
   outline: none;
   border-color: skyblue !important;
   text-indent: 5px;
+}
+
+section:nth-child(1) {
+  position: relative;
+}
+
+.clearall {
+  top: 15px;
+  cursor: pointer;
+}
+
+.container {
+  padding: 0;
 }
