--- a/css/index.css
+++ b/css/index.css
@@ -6,13 +6,17 @@ body {
   min-width: 350px;
 }
 
+h2 {
+  color: #fff;
+}
+
 a:hover {
   text-decoration: none;
 }
 
 header {
   height: 50px;
-  background-color: #323232;
+  background-color: #000;
 }
 
 section {
@@ -22,7 +26,6 @@ section {
 
 label {
   float: left;
-  width: 100px;
   line-height: 50px;
   font-size: 24px;
   color: #ddd;
@@ -148,4 +151,13 @@ section:nth-child(1) {
 
 .container {
   padding: 0;
+}
+
+#canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
