--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,8 @@ body {
 }
 
 h2 {
+  position: relative;
+  padding: 0 2%;
   color: #fff;
 }
 
@@ -42,11 +44,6 @@ header input {
   border: none;
   text-indent: 10px;
   outline: none;
-}
-
-h2 {
-  position: relative;
-  padding: 0 2%;
 }
 
 span {
@@ -160,4 +157,10 @@ section:nth-child(1) {
   width: 100%;
   height: 100%;
   z-index: -1;
+}
+
+.del:focus,
+.del:focus-visible {
+  outline: none;
+  text-decoration: none;
 }
